src/test/deca/syntax/valid/if_else.deca

{
    int x = 2;
    if (x<3){
        println("small dih");
    }
    else{
        println("big dih");
    }
}