src/test/deca/syntax/invalid/hors_portee.deca
// Description :
// Utilisation d'une variable hors de sa portee

// Resultats :
// erreur contextuelle


{
  if (true) {
    int x = 3;
  }
  println(x);
}
